[UI] update: fix td wrap text if too long / update and delete button

--- a/app/frontend/src/components/Layout.css
+++ b/app/frontend/src/components/Layout.css
@@ -49,6 +49,11 @@
   text-align: center;
 }
 
+.nav-button-small {
+  padding: 0.3rem 0.8rem;
+  font-size: 1rem;
+}
+
 .nav-flag-button {
   background: none;
   border: none;
