--- a/app/frontend/src/pages/DashboardPage.css
+++ b/app/frontend/src/pages/DashboardPage.css
@@ -85,11 +85,12 @@
 }
 
 .item-table tr:hover {
-  background-color: #f9fbfd;
+  background-color: grey;
 }
 
 .item-table td {
   color: #444;
+  overflow: hidden;
 }
 
 /* Column selector toggle section */
@@ -159,7 +160,6 @@
   white-space: nowrap;
 }
 
-.action-buttons .update-button,
 .action-buttons .delete-button {
   padding: 4px 10px;
   font-size: 14px;
@@ -170,8 +170,8 @@
 }
 
 .delete-button {
-  padding: 4px 10px;
-  background-color: #f44338;
+  padding: 0.3rem 0.8rem;
+  background-color: black;
   color: white;
   border: none;
   border-radius: 4px;
@@ -180,24 +180,8 @@
 }
 
 .delete-button:hover {
-  background-color: #c62828;
-}
-
-.update-button {
-  font-size: 14px;
-  padding: 4px 10px;
-  background-color: #33aa33;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-  text-decoration: none;
-  display: inline-block;
-}
-
-.update-button:hover {
-  background-color: #0056b3;
+  background-color: gray;
+  color: black;
 }
 
 /* Filter bar */
